# coordinator_helper_api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: .env.template  Dockerfile  main.py
src/api/v1/: routes.py
src/api/v1/endpoints/: reports.py  schedule.py
src/core/: config.py  logging_config.py
src/db/mongodb/: client.py  crud.py  repository.py  service.py
src/schemas/schedule/: __init__.py  erp_user.py  schedule.py
src/services/: erp_crawler.py
telegram_bot/: Dockerfile  main.py
telegram_bot/db/mongodb/: client.py
